Fixed issue that was making text bleed over the container

--- a/client/_admin/admin.scss
+++ b/client/_admin/admin.scss
@@ -5,6 +5,7 @@
 	margin-bottom: 10px;
 	padding-bottom: 5px;
 	border-bottom: 1px solid black;
+	word-wrap: break-word;
 }
 
 .makeAdmin, .makeModerator, .assignPoints, .deleteUser{
